test(network): add some network tests